--- a/index.html
+++ b/index.html
@@ -17,7 +17,65 @@
     <title>Frontend Mentor | GitHub user search app</title>
   </head>
   <body>
-    devfinder Light Dark Search GitHub username... Search Joined Repos Followers
-    Following
+
+    <div class="cmp">
+      <div class="cmp__top">
+        <h2 class="cmp__logo">devfinder</h2>
+        <div class="cmp__theme-toggle">
+          <p class="cmp__theme-toggle__text">Dark</p>
+          <img src="./assets/icon-moon.svg" alt="Toggle icon" class="cmp__theme-toggle__img"/>
+        </div>
+      </div>
+      <form class="cmp__search-form">
+        <img src="./assets/icon-search.svg" alt="Search icon" class="cmp__img-search"/>
+        <input type="text" class="cmp__input" placeholder="Search GitHub username..."/>
+        <p class="cmp__search-form__error">No results</p>
+        <button class="cmp__btn-search" type="submit">Search</button>
+      </form>
+
+      <div class="cmp__main">
+        <div class="cmp__main__top">
+          <img src='' alt="Profle image" class="cmp__img-profile"/>
+          <h2 class="cmp__name">The Octocat</h2> 
+          <p class="cmp__nickname">@octocat</p>
+          <p class="cmp__bio">This profile has no bio</p>
+          <p class="cmp__date">Joined 26 Jan 2011</p>
+        </div>
+
+        <div class="cmp__stats">
+          <div class="cmp__stat">
+            <h5 class="cmp__stat__title">Repos</h5>
+            <p class="cmp__stat__value cmp__repos">8</p>
+          </div>
+          <div class="cmp__stat">
+            <h5 class="cmp__stat__title">Followers</h5>
+            <p class="cmp__stat__value cmp__followers">3038</p>
+          </div>
+          <div class="cmp__stat">
+            <h5 class="cmp__stat__title">Following</h5>
+            <p class="cmp__stat__value cmp__following">9</p>
+          </div>
+        </div>
+
+        <ul class="cmp__details">
+          <li class="cmp__detail">
+            <img src="./assets/icon-location.svg" alt="Location icon" class="cmp__detail__icon"/>
+            <p class="cmp__detail__value cmp__location">San Francisco</p>
+          </li>
+          <li class="cmp__detail">
+            <img src="./assets/icon-website.svg" alt="Website icon" class="cmp__detail__icon"/>
+            <a href="#" class="cmp__detail__value cmp__website">https://github.blog</a>
+          </li>
+          <li class="cmp__detail">
+            <img src="./assets/icon-twitter.svg" alt="Twitter icon" class="cmp__detail__icon"/>
+            <p class="cmp__detail__value cmp__twitter">Not Available</p>
+          </li>
+          <li class="cmp__detail">
+            <img src="./assets/icon-company.svg" alt="Company icon" class="cmp__detail__icon"/>
+            <p class="cmp__detail__value cmp__company">@github</p>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
