--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <form class="cmp__search-form">
         <img src="./assets/icon-search.svg" alt="Search icon" class="cmp__img-search"/>
         <input type="text" class="cmp__input" placeholder="Search GitHub username..."/>
-        <p class="cmp__search-form__error">No results</p>
+        <p class="cmp__search-form__error"></p>
         <button class="cmp__btn-search" type="submit">Search</button>
       </form>
 
       <div class="cmp__main">
         <div class="cmp__main__top">
-          <img src='' alt="Profle image" class="cmp__img-profile"/>
+          <img src='./assets/icon-sun.svg' alt="Profle image" class="cmp__img-profile"/>
           <h2 class="cmp__name">The Octocat</h2> 
           <p class="cmp__nickname">@octocat</p>
           <p class="cmp__bio">This profile has no bio</p>
