--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
         </div>
 
         <ul class="cmp__details">
-          <li class="cmp__detail">
+          <li class="cmp__detail cmp__detail-location">
             <img src="./assets/icon-location.svg" alt="Location icon" class="cmp__detail__icon"/>
             <p class="cmp__detail__value cmp__location">San Francisco</p>
           </li>
-          <li class="cmp__detail">
+          <li class="cmp__detail cmp__detail-website">
             <img src="./assets/icon-website.svg" alt="Website icon" class="cmp__detail__icon"/>
             <a href="#" class="cmp__detail__value cmp__website">https://github.blog</a>
           </li>
-          <li class="cmp__detail">
+          <li class="cmp__detail cmp__detail-twitter">
             <img src="./assets/icon-twitter.svg" alt="Twitter icon" class="cmp__detail__icon"/>
             <p class="cmp__detail__value cmp__twitter">Not Available</p>
           </li>
-          <li class="cmp__detail">
+          <li class="cmp__detail cmp__detail-company">
             <img src="./assets/icon-company.svg" alt="Company icon" class="cmp__detail__icon"/>
             <p class="cmp__detail__value cmp__company">@github</p>
           </li>
